<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8b8682"
    android:weightSum="5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gesamt"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:textSize="25dp"
            android:text="@string/gesamt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/unentschieden"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:textSize="25dp"
            android:text="@string/unentschieden"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/xWin"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:textSize="25dp"
            android:text="@string/xWin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/oWin"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:textSize="25dp"
            android:text="@string/oWin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/speichern"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:onClick="speichernClick"
            android:text="@string/speichern"
            android:enabled="false"
            android:clickable="false"/>

        <Button
            android:id="@+id/laden"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:onClick="ladenClick"
            android:text="@string/laden"
            android:enabled="false"
            android:clickable="false"/>


    </LinearLayout>

</LinearLayout>
