<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8b8682"
    android:weightSum="4" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_1"
            android:textSize="100sp"
            android:onClick="setSymbol" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_2"
            android:textSize="100sp"
            android:onClick="setSymbol"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_3"
            android:textSize="100sp"
            android:onClick="setSymbol"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_4"
            android:textSize="100sp"
            android:onClick="setSymbol" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_5"
            android:textSize="100sp"
            android:onClick="setSymbol"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_6"
            android:textSize="100sp"
            android:onClick="setSymbol"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_7"
            android:textSize="100sp"
            android:onClick="setSymbol"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_8"
            android:textSize="100sp"
            android:onClick="setSymbol"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_9"
            android:textSize="100sp"
            android:onClick="setSymbol"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal"
            android:weightSum="1"
            android:clickable="false">

            <RadioButton
                android:id="@+id/radio_O"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/O"
                android:onClick="onRadioButtonChanged"
                android:clickable="false"
                android:textColor="#f5f5f5"/>

            <RadioButton
                android:id="@+id/radio_X"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/X"
                android:onClick="onRadioButtonChanged"
                android:clickable="false"
                android:textColor="#f5f5f5"/>

        </RadioGroup>

<!--
        <TextView
            android:id="@+id/spieler"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/spieler"
            android:textColor="#f5f5f5"
            android:textSize="20sp"
            android:gravity="center" />
-->
        <TextView
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textColor="#f5f5f5"
            android:textSize="20sp"
            android:gravity="center"
            android:onClick="resetClick"
            android:clickable="true" />

        <TextView
            android:id="@+id/statistik"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/statistik"
            android:textColor="#f5f5f5"
            android:textSize="20sp"
            android:gravity="center"
            android:onClick="statistikClick"
            android:clickable="true"/>

    </LinearLayout>

</LinearLayout>
